# base

./: Dockerfile  README.md  docker-compose.yaml  env_example  pyproject.toml
base/: models.py
examples/: MNIST_CNN_2_Layers.py  MNIST_CNN_7_Layers.py  MNIST_Fourier_2_Layers.py  MNIST_Fourier_7_Layers.py  MNIST_dtcwt_2_Layers.py  MNIST_dtcwt_7_Layers.py  cnn_2layers.py  cnn_7layers.py  cnn_paper.py  dtcwt_2layers.py  dtcwt_7_layers.py  findthebest.py  fourier_2layers.py  fourier_7layers.py  show_devices.py
scripts/: .bashrc  cpu  cuda_visible.py  gpu  install_docker_compose.sh  next_free_gpu.py  withgpu
